kubernetes/k14s/mongodb.yaml
#@ load("@ytt:data", "data")

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: #@ data.values.namespace
  labels: #@ data.values.mongodb_labels
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels: #@ data.values.mongodb_labels
  template:
    metadata:
      labels: #@ data.values.mongodb_labels
    spec:
      containers:
      - env:
        - name: BITNAMI_DEBUG
          value: "false"
        - name: ALLOW_EMPTY_PASSWORD
          value: "no"
        - name: MONGODB_SYSTEM_LOG_VERBOSITY
          value: "0"
        - name: MONGODB_DISABLE_SYSTEM_LOG
          value: "yes"
        - name: MONGODB_ENABLE_IPV6
          value: "no"
        - name: MONGODB_ENABLE_DIRECTORY_PER_DB
          value: "no"
        - name: MONGODB_USERNAME
          valueFrom:
            secretKeyRef:
              key: username
              name: mongodb-secret
        - name: MONGODB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: mongodb-secret
        - name: MONGODB_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: mongodb-secret
        - name: MONGODB_DATABASE
          value: guestbook
        image: bitnami/mongodb:latest
        imagePullPolicy: #@ data.values.imagePullPolicy
        livenessProbe:
          exec:
            command:
            - mongo
            - --eval
            - db.adminCommand('ping')
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: mongodb
        ports:
        - containerPort: #@ data.values.mongodb_port
          name: mongodb
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - mongo
            - --eval
            - db.adminCommand('ping')
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        securityContext:
          runAsUser: 1001
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
        volumeMounts:
        - mountPath: /bitnami/mongodb
          name: data
      volumes:
      - name: data
        emptyDir: {}
      securityContext:
        fsGroup: 1001 
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: #@ data.values.namespace
  labels: #@ data.values.mongodb_labels
spec:
  ports:
  - name: mongodb
    port: #@ data.values.mongodb_port
    protocol: TCP
    targetPort: mongodb
  selector: #@ data.values.mongodb_labels
  sessionAffinity: None
  type: ClusterIP
