kubernetes/k14s/istio.yaml
#@ load("@ytt:data", "data")
#@ load("@ytt:overlay", "overlay")

#@ if data.values.istio:
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: introspect-vs
  namespace: #@ data.values.namespace
spec:
  hosts:
  - #@ data.values.ingress_dns
  gateways:
  - #@ data.values.istio_gw
  http:
  - match:
    - uri:
        regex: /.*
    route:
    - destination:
        port:
          number: 9090
        host: introspect
#! ---
#! apiVersion: networking.istio.io/v1beta1
#! kind: Gateway
#! metadata:
#!   name: #@ data.values.istio_gw
#!   namespace: istio-system
#! spec:
#!   selector:
#!     istio: ingressgateway #! use istio default ingress gateway
#!   servers:
#!   - port:
#!       number: 80
#!       name: http
#!       protocol: HTTP
#!     tls:
#!       httpsRedirect: true
#!     hosts:
#!     - #@ data.values.host_dns
#!   - port:
#!       number: 443
#!       name: https
#!       protocol: HTTPS
#!     tls:
#!       mode: SIMPLE
#!       credentialName: wildcard-tls
#!     hosts:
#!     - #@ data.values.host_dns
#! ---
#! apiVersion: cert.gardener.cloud/v1alpha1
#! kind: Certificate
#! metadata:
#!   name: introspect-cert
#!   namespace: istio-system
#! spec:
#!   commonName: #@ data.values.ingress_dns
#!   issuerRef:
#!     name: #@ data.values.cert_issuer
#!   secretName: introspect-tls2
#! ---
#@ end
